--- a/04_Production_RAG/Ollama_Setup_and_Testing.ipynb
+++ b/04_Production_RAG/Ollama_Setup_and_Testing.ipynb
@@ -49,8 +49,8 @@
             "✅ Ollama is running!\n",
             "\n",
             "Available models:\n",
-            "  - gpt-oss:20b\n",
-            "  - embeddinggemma:latest\n"
+            "  - embeddinggemma:latest\n",
+            "  - gpt-oss:20b\n"
           ]
         }
       ],
@@ -121,7 +121,7 @@
             "\n",
             "✅ Successfully created embedding!\n",
             "Embedding dimension: 768\n",
-            "First 10 values: [-0.14624307, 0.029132523, 0.037615955, -0.02487349, -0.02655731, 0.016060056, -0.027486855, 0.027256342, 0.01139732, -2.40085e-05]\n"
+            "First 10 values: [-0.14639841, 0.028866973, 0.037540965, -0.02439001, -0.026060913, 0.016037343, -0.027608989, 0.027422925, 0.011567893, 8.794677e-05]\n"
           ]
         }
       ],
@@ -152,15 +152,15 @@
             "\n",
             "Document 1: 'The quick brown fox jumps over the lazy dog....'\n",
             "  Embedding dimension: 768\n",
-            "  First 5 values: [-0.14781645, 0.002890088, 0.052144155, -0.029089162, -0.036695607]\n",
+            "  First 5 values: [-0.14791986, 0.0032240578, 0.05226716, -0.028933357, -0.037015975]\n",
             "\n",
             "Document 2: 'Machine learning is a subset of artificial intelli...'\n",
             "  Embedding dimension: 768\n",
-            "  First 5 values: [-0.1240763, -0.0027511106, -0.00032809668, 0.010076388, 0.001677464]\n",
+            "  First 5 values: [-0.12389448, -0.0026332135, -0.00034515624, 0.009981163, 0.0014568019]\n",
             "\n",
             "Document 3: 'Python is a popular programming language for data ...'\n",
             "  Embedding dimension: 768\n",
-            "  First 5 values: [-0.16269195, -0.010295422, 0.025464684, 0.000692403, -0.01887165]\n"
+            "  First 5 values: [-0.16287562, -0.010339343, 0.025611587, 0.00061985775, -0.018768627]\n"
           ]
         }
       ],
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -292,7 +292,7 @@
             "\n",
             "✅ Response generated!\n",
             "\n",
-            "Model output: Quantum computing harnesses qubits that can occupy superpositions and become entangled, allowing quantum gates to perform massively parallel operations that can solve certain problems exponentially faster than classical computers.\n"
+            "Model output: Quantum computing harnesses the principles of quantum superposition, entanglement, and interference to manipulate quantum bits (qubits) in ways that enable certain computations—such as factoring large numbers or simulating quantum systems—to be performed exponentially faster than with classical computers.\n"
           ]
         }
       ],
@@ -311,20 +311,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Total tokens: 191\n",
-            "Total time seconds: 2.793579209\n",
-            "Load time seconds: 1.101918542\n",
-            "Generation time seconds: 1.336429292\n",
-            "Prompt processing time seconds: 0.354481542\n",
-            "Generation tokens per second: 87.54671923189184\n",
-            "Prompt tokens per second: 208.75558028350036\n"
+            "Total tokens: 237\n",
+            "Total time seconds: 53.8015266\n",
+            "Load time seconds: 17.7388199\n",
+            "Generation time seconds: 32.725363\n",
+            "Prompt processing time seconds: 3.3324896\n",
+            "Generation tokens per second: 4.980846201767112\n",
+            "Prompt tokens per second: 22.20562068670822\n"
           ]
         }
       ],
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -345,49 +345,69 @@
             "\n",
             "✅ Response generated!\n",
             "\n",
-            "Model output: **Machine learning (ML)** is a way to let computers learn patterns and make decisions from data instead of being told exactly how to do everything.\n",
+            "Model output: **Machine learning (ML)** is a way to let computers learn patterns and make decisions by themselves, instead of being told exactly what to do step by step.\n",
             "\n",
             "---\n",
             "\n",
-            "### The basic idea\n",
+            "## 1. The big idea\n",
             "\n",
-            "| Step | What happens | Analogy |\n",
+            "1. **Give the computer a lot of examples**  \n",
+            "   *Data* – pictures, numbers, text, sensor readings, etc.\n",
+            "\n",
+            "2. **Let it find the pattern**  \n",
+            "   The computer uses math to discover regularities in the data.\n",
+            "\n",
+            "3. **Use that pattern to predict or decide**  \n",
+            "   Once it has learned, it can apply what it learned to new, unseen data.\n",
+            "\n",
+            "---\n",
+            "\n",
+            "## 2. How it works (in a nutshell)\n",
+            "\n",
+            "| Step | What happens | Example |\n",
             "|------|--------------|---------|\n",
-            "| 1. **Collect data** | Gather examples (images, text, numbers, etc.) | A student collects notes from many books |\n",
-            "| 2. **Teach the model** | The computer looks at the data and finds regularities | The student reads the notes and notices common themes |\n",
-            "| 3. **Make predictions** | When given new data, the model uses the patterns it learned to guess the answer | The student uses what they learned to solve a new problem |\n",
+            "| **Collect data** | Gather many instances of the problem. | Thousands of photos of cats and dogs. |\n",
+            "| **Choose a model** | Pick a mathematical function that can represent patterns. | A neural network, a decision tree, a linear regression line. |\n",
+            "| **Train the model** | Show the data to the model and adjust its internal settings (weights) so its predictions get better. | Adjust the neural network so it correctly classifies most photos. |\n",
+            "| **Validate** | Test on data it hasn't seen to make sure it generalizes. | Check accuracy on a separate set of cat/dog photos. |\n",
+            "| **Deploy** | Use the trained model in real life. | A smartphone app that tells you if a photo is a cat or dog. |\n",
             "\n",
             "---\n",
             "\n",
-            "### Types of learning\n",
+            "## 3. Types of machine learning\n",
             "\n",
-            "| Type | How it works | Everyday example |\n",
-            "|------|--------------|------------------|\n",
-            "| **Supervised** | The data comes with the correct answer (label). The model learns to map input → output. | Spam filter: emails labeled “spam” or “not spam”. |\n",
-            "| **Unsupervised** | No labels. The model finds hidden structure (clusters, associations). | Grouping customers by buying habits. |\n",
-            "| **Reinforcement** | The model gets rewards or penalties for actions and learns a strategy. | A game‑playing AI learning to win by trial and error. |\n",
-            "\n",
-            "---\n",
-            "\n",
-            "### Why it matters\n",
-            "\n",
-            "- **Automation**: Let computers do tasks that need pattern recognition (image recognition, speech recognition, recommendation engines).\n",
-            "- **Speed**: Once trained, models can process huge amounts of data quickly.\n",
-            "- **Adaptability**: Models can improve over time as they see more data.\n",
+            "| Type | How it learns | Typical use |\n",
+            "|------|---------------|-------------|\n",
+            "| **Supervised** | Learns from labeled examples (input + correct output). | Spam detection, image classification. |\n",
+            "| **Unsupervised** | Finds structure without labels (clusters, patterns). | Customer segmentation, anomaly detection. |\n",
+            "| **Reinforcement** | Learns by trial‑and‑error, receiving rewards or penalties. | Game playing (e.g., AlphaGo), robot navigation. |\n",
+            "| **Semi‑supervised / Self‑supervised** | Mixes labeled and unlabeled data or creates labels from the data itself. | Natural language understanding, speech recognition. |\n",
             "\n",
             "---\n",
             "\n",
-            "### A quick example\n",
+            "## 4. Everyday examples\n",
             "\n",
-            "1. **Collect**: 1,000 pictures of cats and dogs, each labeled “cat” or “dog”.\n",
-            "2. **Train**: The computer looks at pixel patterns and learns which features (eyelash length, ear shape, etc.) correlate with each label.\n",
-            "3. **Predict**: When you show it a new picture, it outputs “cat” or “dog” based on what it learned.\n",
+            "| Task | ML in action |\n",
+            "|------|--------------|\n",
+            "| **Voice assistants** | Recognize spoken words and respond. |\n",
+            "| **Recommendation engines** | Suggest movies, music, products. |\n",
+            "| **Spam filters** | Detect unwanted emails. |\n",
+            "| **Autonomous vehicles** | Interpret camera & sensor data to drive. |\n",
+            "| **Medical diagnosis** | Identify disease patterns in scans. |\n",
             "\n",
             "---\n",
             "\n",
-            "### Bottom line\n",
+            "## 5. Why it matters\n",
             "\n",
-            "Machine learning is **training a computer to recognize patterns in data and use those patterns to make decisions or predictions**—much like how we learn from experience.\n"
+            "- **Speed & scale** – ML can process millions of data points in seconds.  \n",
+            "- **Adaptability** – Models can improve over time as more data arrives.  \n",
+            "- **Automation** – Tasks that were manual or impossible become routine.\n",
+            "\n",
+            "---\n",
+            "\n",
+            "## 6. Quick takeaway\n",
+            "\n",
+            "Machine learning is like teaching a computer by example: feed it data, let it discover patterns, and then let it use those patterns to make predictions or decisions on new data. It powers many of the smart features we use every day.\n"
           ]
         }
       ],
@@ -407,20 +427,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Total tokens: 622\n",
-            "Total time seconds: 6.603062583\n",
-            "Load time seconds: 0.105166042\n",
-            "Generation time seconds: 6.159919833\n",
-            "Prompt processing time seconds: 0.313681375\n",
-            "Generation tokens per second: 86.04008077518758\n",
-            "Prompt tokens per second: 293.29124178953884\n"
+            "Total tokens: 798\n",
+            "Total time seconds: 142.2850704\n",
+            "Load time seconds: 0.1787051\n",
+            "Generation time seconds: 140.7628158\n",
+            "Prompt processing time seconds: 1.2339192\n",
+            "Generation tokens per second: 5.015529108220639\n",
+            "Prompt tokens per second: 74.55917697042075\n"
           ]
         }
       ],
@@ -439,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -450,9 +470,9 @@
             "\n",
             "Streaming response:\n",
             "----------------------------------------\n",
-            "Silent code hums deep  \n",
-            "Minds born of silicon dreams  \n",
-            "Stars in data glow\n",
+            "Silent code whispers  \n",
+            "Learning patterns, mind unseen  \n",
+            "Metal heart beats soft\n",
             "----------------------------------------\n",
             "\n",
             "✅ Streaming completed!\n"
@@ -525,7 +545,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.11"
     }
   },
   "nbformat": 4,
