--- a/04_Production_RAG/Ollama_Setup_and_Testing.ipynb
+++ b/04_Production_RAG/Ollama_Setup_and_Testing.ipynb
@@ -545,7 +545,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "undefined.undefined.undefined"
     }
   },
   "nbformat": 4,
